# ChangeLog for games-strategy/freeciv
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.96 2010/01/11 13:26:55 tupone Exp $

*freeciv-2.1.10 (11 Jan 2010)

  11 Jan 2010; Tupone Alfredo <tupone@gentoo.org> +freeciv-2.1.10.ebuild:
  Version bump to 2.1.10 Bug #296057 by Tolga Dalman

  28 Aug 2009; Tristan Heaven <nyhm@gentoo.org> freeciv-2.1.9.ebuild:
  Update icon cache after install/remove

  02 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org> freeciv-2.1.9.ebuild:
  esound is going away

  31 May 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.9.ebuild:
  Marking freeciv-2.1.9 ppc64 for bug 268536

  20 May 2009; nixnut <nixnut@gentoo.org> freeciv-2.1.9.ebuild:
  ppc stable #268536

  13 May 2009; Ferris McCormick <fmccor@gentoo.org> freeciv-2.1.9.ebuild:
  Sparc stable, Bug #268536.

  13 May 2009; Markus Meier <maekke@gentoo.org> freeciv-2.1.9.ebuild:
  amd64/x86 stable, bug #268536

  09 May 2009; Tobias Klausmann <klausman@gentoo.org> freeciv-2.1.9.ebuild:
  Stable on alpha, bug #268536

*freeciv-2.1.9 (06 Apr 2009)

  06 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +freeciv-2.1.9.ebuild:
  version bump

  21 Mar 2009; Raúl Porcel <armin76@gentoo.org> freeciv-2.1.8.ebuild:
  x86 stable, bug #261797

  18 Mar 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.8.ebuild:
  stable ppc, bug 261797

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> freeciv-2.1.8.ebuild:
  Stable on alpha, bug #261797 (this time for real)

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Keyworded on alpha, bug #261797

  15 Mar 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.8.ebuild:
  stable ppc64, bug 261797

  11 Mar 2009; Richard Freeman <rich0@gentoo.org> freeciv-2.1.8.ebuild:
  amd64 stable - 261797

  09 Mar 2009; Ferris McCormick <fmccor@gentoo.org> freeciv-2.1.8.ebuild:
  Sparc stable, Bug #261797.

*freeciv-2.1.8 (02 Jan 2009)
