@@ -1,7 +1,7 @@
-DIST freeciv-2.1.10.tar.bz2 29877983 RMD160 ce9a35a984b7130d04d2df37ccb7f61648143062 SHA1 94a0e9039d12142394df30148a7e1edd685da058 SHA256 552a53da38056bd1c916eaac62e0ce41e27f0b0d026cb56be8dbe527a7287ab6
+DIST freeciv-2.1.11.tar.bz2 29884418 RMD160 5c7ea9d51fa4de876af403c21e37ec545db40fa6 SHA1 bf086d07e12fddd49142a7b20da88d164725cbd9 SHA256 f52fb8318cf121b74da04d5279c24d2045d829718c67cc21cb62439f50754707
 DIST freeciv-2.1.9.tar.bz2 29732845 RMD160 cbe12facbbf00a85410e1324eb6ba3f2351ea1f1 SHA1 01a3500a9d0f9d9c9b95b7c4b57f2446f671a900 SHA256 42ed80ced681f14d3e7a40bcf754bc1d4392d722e49173961829a68cc74baf38
 DIST stdsounds3.tar.gz 118278 RMD160 46bb5fef4b2d3acf9959b3228c962bdf6591ea09 SHA1 103d02a0702687fb038f5187a321f8074b4ebfb5 SHA256 a3cc2be93c006c3a9492349aa4552bf059e45efc94135f09241877c221ae1bfa
-EBUILD freeciv-2.1.10.ebuild 4796 RMD160 d6d68767168268be58f164a87f9780b8d10bd79a SHA1 b9024a6f3ab2ec7260efa22f1e16692fa581ca20 SHA256 93fd013c6f2aae9fbe414130ab422c8044f2e896e29257f3517b13e2f3897b12
+EBUILD freeciv-2.1.11.ebuild 3912 RMD160 044d18b3b9c97f322e93c4df145a3ec50185e638 SHA1 97db6631ea058e7b71a367a9774e793e70496b36 SHA256 f135b4327fab4893137062f797ac283971f7244616c0aabed10b481be58806d0
 EBUILD freeciv-2.1.9.ebuild 5197 RMD160 e6beb59a518fc656ae7bbf240ac9ce9cd99f7d7d SHA1 9308b8ec8c62399e6d10ef471a1d6f9b46c7cec1 SHA256 a8b03efe667d1af53c9318c34c56f0c7d9c40b0d9449a343a75625d7c7428851
-MISC ChangeLog 13961 RMD160 54ae970a87bf578963171934646370c70e04cf91 SHA1 a6e5fc1985ab7850b1390c372fd513991ffc1279 SHA256 6cbe0a49f75b9b6c2326091d16f5278874cc4e34d3c1b15851d3474c03ab06c5
-MISC metadata.xml 236 RMD160 da6a85d843183d3823ae8bcaf92cfd5bf61cc098 SHA1 ad6c23aa83441de75d14971aad4b6db5033a57e5 SHA256 c82561dfd15956bdf1e990623e951b31932fc782bdca7d94ea91dae35d88116d
+MISC ChangeLog 14092 RMD160 d6ec7bb705c94c27e1083cb00def99c4e49882ef SHA1 65b45a5f814dcaffe13fb7133774fa57817646ca SHA256 325ada85ef80365690f017b80bf34b70bf5d9d4e9f4770bab977f7c10c5d0911
+MISC metadata.xml 296 RMD160 4731eabd213e1faee5f3c3eae53076eb586a9ff4 SHA1 21d2ebe86e2f6ce406a29b68355040ecc7c788b6 SHA256 0d34de77af9814418b5e1ac89ed6d6caf100ffa2a1faaa51bd900a53f51860bf
