@@ -1,40 +1,41 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/freeciv-2.1.10.ebuild,v 1.1 2010/01/11 13:26:55 tupone Exp $
-EAPI=2
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/freeciv-2.1.11.ebuild,v 1.3 2010/02/02 17:31:35 mr_bones_ Exp $
 
+EAPI=2
 inherit eutils gnome2-utils games
 
 DESCRIPTION="multiplayer strategy game (Civilization Clone)"
 HOMEPAGE="http://www.freeciv.org/"
-SRC_URI="mirror://sourceforge/freeciv/${P}.tar.bz2
-	!dedicated? (
-		sdl? (
-			ftp://ftp.freeciv.org/freeciv/contrib/audio/soundsets/stdsounds3.tar.gz )
-	)"
+SRC_URI="mirror://sourceforge/freeciv/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="auth dedicated gtk nls readline sdl Xaw3d"
+IUSE="auth dedicated ggz gtk nls readline sdl Xaw3d"
 
 RDEPEND="readline? ( sys-libs/readline )
-	auth? ( virtual/mysql )
+	sys-libs/zlib
 	!dedicated? (
 		nls? ( virtual/libintl )
-		gtk? ( >=x11-libs/gtk+-2 )
+		gtk? ( x11-libs/gtk+:2 )
 		!gtk? (
-			Xaw3d? ( x11-libs/Xaw3d )
-			!Xaw3d? (
-				sdl? (
-					media-libs/sdl-image
-					media-libs/freetype
-				)
-				!sdl? ( x11-libs/libXaw )
+			sdl? (
+				media-libs/libsdl
+				media-libs/sdl-image
+				media-libs/freetype
+			)
+			!sdl? (
+				Xaw3d? ( x11-libs/Xaw3d )
+				!Xaw3d? ( x11-libs/libXaw )
 			)
 		)
+		ggz? ( dev-games/ggz-client-libs )
 		media-libs/libpng
+		media-libs/alsa-lib
+		media-libs/audiofile
 		sdl? ( media-libs/sdl-mixer )
+		auth? ( virtual/mysql )
 	)"
 DEPEND="${RDEPEND}
 	nls? ( sys-devel/gettext )
@@ -48,38 +49,17 @@ pkg_setup() {
 	if ! use dedicated ; then
 		if use gtk ; then
 			einfo "The Freeciv Client will be built with the GTK+-2 toolkit"
-		elif use Xaw3d ; then
-			einfo "The Freeciv Client will be built with the Xaw3d toolkit"
 		elif use sdl ; then
 			einfo "The Freeciv Client will be built with the SDL toolkit"
+		elif use Xaw3d ; then
+			einfo "The Freeciv Client will be built with the Xaw3d toolkit"
 		else
 			einfo "The Freeciv Client will be built with the Xaw toolkit"
-		fi
-		if ! use sdl ; then
-			ewarn
-			ewarn "To enable sound support in civclient, you must enable"
-			ewarn "this USE flags: sdl"
-			ewarn
 		fi
 	fi
 }
 
 src_prepare() {
-	# install locales in /usr/share/locale
-	sed -i \
-		-e 's:^\(localedir = \).*:\1/usr/share/locale:' \
-		intl/Makefile.in po/Makefile.in.in \
-		|| die "sed failed"
-	sed -i \
-		-e 's:$datadir/locale:/usr/share/locale:' \
-		configure \
-		|| die "sed failed"
-
-	# change .desktop category so it's freedesktop complient
-	sed -i \
-		-e '/Icon/ s:\.png::' \
-		bootstrap/freeciv.desktop.in \
-		|| die "sed failed"
 	# install the .desktop in /usr/share/applications
 	# install the icons in /usr/share/pixmaps
 	sed -i \
@@ -117,29 +97,26 @@ src_configure() {
 	local myclient
 
 	if use dedicated ; then
-		mysoundconf="--disable-sdl-mixer"
 		myclient="no"
 	else
 		myclient="xaw"
-		use sdl && myclient="sdl"
 		use Xaw3d && myclient="xaw3d"
+		use sdl && myclient="sdl"
 		if use gtk ; then
-			myclient="gtk-2.0"
+			myclient="gtk"
 		fi
-		#FIXME --enable-sdl-mixer actually disable them...
-		#FIXME   ==> use --disable-* only, and autodetect to enable.
-		use sdl || mysoundconf="${mysoundconf} --disable-sdl-mixer"
 	fi
 
 	egamesconf \
 		--disable-dependency-tracking \
+		--localedir=/usr/share/locale \
 		$(use_enable auth) \
 		$(use_enable nls) \
 		$(use_with readline) \
-		--without-ggz-client \
+		$(use_enable sdl sdl-mixer) \
+		$(use_with ggz ggz-client) \
 		--enable-client=${myclient} \
-		${mysoundconf} \
-		|| die "egamesconf failed"
+		${mysoundconf}
 }
 
 src_install() {
@@ -150,11 +127,6 @@ src_install() {
 		if ! use gtk && ! use sdl ; then
 			insinto /etc/X11/app-defaults
 			doins data/Freeciv || die "doins failed"
-		fi
-		# Install sounds if at least one sound plugin was built
-		if use sdl ; then
-			insinto "${GAMES_DATADIR}"/${PN}
-			doins -r ../data/stdsounds* || die "doins sounds failed"
 		fi
 		# Create and install the html manual. It can't be done for dedicated
 		# servers, because the 'civmanual' tool is then not built. Also
