@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/freeciv
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.96 2010/01/11 13:26:55 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.97 2010/01/31 07:27:00 mr_bones_ Exp $
+
+*freeciv-2.1.11 (31 Jan 2010)
+
+  31 Jan 2010; Michael Sterrett <mr_bones_@gentoo.org>
+  +freeciv-2.1.11.ebuild:
+  version bump
 
 *freeciv-2.1.10 (11 Jan 2010)
 
